# MindWiki

./: .env.example  .gitignore  README.md  pyproject.toml
doc/: development-progress.md
doc/design/: README.md  personal-knowledge-rag-roadmap.md
doc/design/step-01-product-scope/: 01.01-core-user-scenarios.md  01.02-scenario-input-output-and-success-criteria.md  01.03-first-phase-data-source-scope.md  01.04-first-phase-generation-capability-scope.md  01.05-non-goals-and-boundaries.md
doc/design/step-02-system-architecture/: 02.01-system-context.md  02.02-main-business-flows.md  02.03-service-boundaries-and-module-responsibilities.md
doc/design/step-03-domain-model/: 03.01-core-entity-list-and-responsibilities.md  03.02-keys-foreign-keys-and-index-fields.md  (+1 more)
document/: 退换货规定.md
logs/: mindwiki.jsonl
migrations/: README.md
scripts/: README.md  init_local_db.sql  reset_local_db.sql  verify_local_directory_import.py  verify_local_hybrid_retrieval.py  verify_local_import.py  verify_local_llm.py  verify_local_retrieval.py  verify_local_step09_full_orchestration.py  verify_local_step09_orchestration.py  verify_local_step10_answer_generation.py  verify_local_vector_retrieval.py
src/mindwiki/: __init__.py  __main__.py
tests/: test_answer_generation_service.py  test_cli.py  test_embedding_service.py  test_llm_models.py  test_llm_provider.py  test_llm_service.py  test_logging_integration.py  test_observability_logger.py  test_qa_orchestration_service.py  test_retrieval_projection.py  test_retrieval_service.py  test_vector_index_service.py
(+75 files in other folders)
