[project]
name = "mindwiki"
version = "0.1.0"
description = "Personal knowledge base RAG project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mindwiki = "mindwiki.cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
